--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <section class="content">
         <div class="content_video">
-            <video src="/video/video.mp4" autoplay loop muted></video>
+            <video src="./video/video.mp4" autoplay loop muted></video>
         </div>
         <div class="cover_content">
-            <img src="/video/part_2.png" alt="">
+            <img src="./video/part_2.png" alt="">
         </div>
     </section>
 </body>
